deploy/k8s/platform/gateway/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
    - name: platform-gateway
      namespace: gateway-ns
      sectionName: http
  hostnames:
    - "stockfinder.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-app-service
          port: 80
          namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
    - name: platform-gateway
      namespace: gateway-ns
      sectionName: http
  hostnames:
    - "api.stockfinder.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-app-service
          port: 80
          namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3-route
spec:
  parentRefs:
    - name: platform-gateway
      namespace: gateway-ns
      sectionName: http
  hostnames:
    - "s3.stockfinder.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweedfs-s3
          port: 8333
          namespace: default
